deploy/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: properfans-backend-staging-service
  annotations:
    # Note that the backend talks over HTTP.
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: ClusterIP
  selector:
    app: properfans-backend-staging
  ports:
    - name: http
      port: 80
      targetPort: 3000
