deploy/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ellingsen-staging-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - staging-api.properfans.com
    secretName: stagingapiproperfans-tls
  rules:
  - host: staging-api.properfans.com
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: properfans-backend-staging-service
              port: 
                number: 80
